gargomo 01-30-2012 FAQ feature: update selenium read and update test cases.

--- a/features/custom/f_a_q/selenium/tc/read.html
+++ b/features/custom/f_a_q/selenium/tc/read.html
@@ -23,7 +23,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//div[@id='block-system-main']/div/div/div/div/ol/li[4]/div/div/dl/dt</td>
+	<td>//div[@id='block-system-main']/div/div/div[2]/div/ol/li[3]/div/span</td>
 	<td></td>
 </tr>
 <tr>
