--- a/features/custom/f_a_q/selenium/tc/update.html
+++ b/features/custom/f_a_q/selenium/tc/update.html
@@ -32,6 +32,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>type</td>
+	<td>id=edit-title</td>
+	<td>Question test updated</td>
+</tr>
+<tr>
 	<td>click</td>
 	<td>id=switch_edit-body-und-0-value</td>
 	<td></td>
@@ -39,12 +44,7 @@
 <tr>
 	<td>type</td>
 	<td>id=edit-body-und-0-value</td>
-	<td>&lt;p&gt;Answer test updated&lt;/p&gt;<br /></td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=edit-title</td>
-	<td>Question test updated</td>
+	<td>&lt;p&gt;Answer test updated&lt;/p&gt;</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -56,7 +56,6 @@
 	<td>css=div.messages.status</td>
 	<td>Status message F.A.Q Question test updated has been updated.</td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
