Links selenium tests updated

--- a/features/custom/links/selenium/tc/create_public.html
+++ b/features/custom/links/selenium/tc/create_public.html
@@ -23,17 +23,12 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=second community</td>
+	<td>link=third community</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Add content</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>xpath=(//a[contains(text(),'Links')])[2]</td>
+	<td>link=Create links</td>
 	<td></td>
 </tr>
 <tr>
@@ -42,14 +37,9 @@
 	<td>Public link 3</td>
 </tr>
 <tr>
-	<td>addSelection</td>
-	<td>id=edit-group-audience-und</td>
-	<td>label=second community</td>
-</tr>
-<tr>
-	<td>select</td>
-	<td>id=edit-language</td>
-	<td>label=English</td>
+	<td>type</td>
+	<td>id=edit-field-link-und-1-url</td>
+	<td>http://www.google.fr</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -61,7 +51,6 @@
 	<td>Links Public link 3 has been created</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
