--- a/features/custom/links/selenium/tc/see_member.html
+++ b/features/custom/links/selenium/tc/see_member.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/multisite_drupal_wde/en/content/private-link-4</td>
+	<td>/multisite_drupal_wde/en</td>
 	<td></td>
 </tr>
 <tr>
@@ -43,7 +43,12 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=second community</td>
+	<td>link=third community</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=links</td>
 	<td></td>
 </tr>
 <tr>
@@ -58,12 +63,12 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Private link 4</td>
+	<td>xpath=(//a[contains(text(),'http://www.google.fr')])[2]</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTitle</td>
-	<td>url.com: Search with Many</td>
+	<td>Google</td>
 	<td></td>
 </tr>
 </tbody></table>
