--- a/features/custom/links/selenium/tc/see_user.html
+++ b/features/custom/links/selenium/tc/see_user.html
@@ -43,7 +43,12 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=second community</td>
+	<td>link=third community</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=links</td>
 	<td></td>
 </tr>
 <tr>
