--- a/features/custom/links/selenium/tc/create_private.html
+++ b/features/custom/links/selenium/tc/create_private.html
@@ -38,12 +38,17 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Add content</td>
+	<td>link=communities</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Links</td>
+	<td>link=third community</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Create links</td>
 	<td></td>
 </tr>
 <tr>
@@ -52,19 +57,14 @@
 	<td>Private link 4</td>
 </tr>
 <tr>
-	<td>addSelection</td>
-	<td>id=edit-group-audience-und</td>
-	<td>label=second community</td>
-</tr>
-<tr>
-	<td>select</td>
-	<td>id=edit-language</td>
-	<td>label=English</td>
-</tr>
-<tr>
 	<td>click</td>
 	<td>id=edit-group-access-und-1</td>
 	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=edit-field-link-und-1-url</td>
+	<td>http://www.google.fr</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
