Correction on selenium tests

--- a/sites/all/modules/features/custom/communities/selenium/tc/manage_join.html
+++ b/sites/all/modules/features/custom/communities/selenium/tc/manage_join.html
@@ -58,7 +58,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=People</td>
+	<td>xpath=(//a[contains(text(),'People')])[2]</td>
 	<td></td>
 </tr>
 <tr>
