--- a/sites/all/modules/features/custom/wiki/selenium/tc/browse_user.html
+++ b/sites/all/modules/features/custom/wiki/selenium/tc/browse_user.html
@@ -4,12 +4,12 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://158.167.34.191/multisite_drupal_wde/en" />
-<title>user_answer</title>
+<title>browse_user</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">user_answer</td></tr>
+<tr><td rowspan="1" colspan="3">browse_user</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
@@ -43,107 +43,82 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Public survey1</td>
+	<td>public wiki1</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextNotPresent</td>
-	<td>Private survey2</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Public survey1</td>
-	<td></td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=edit-submitted-question1</td>
-	<td>blabla</td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=edit-submitted-question2-1</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=edit-submitted-question2-4</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=edit-submitted-question2-3</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=edit-submit</td>
+	<td>private wiki2</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Thank you, your submission has been received.</td>
+	<td>CM wiki3</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Go back to the form</td>
+	<td>link=communities</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Results</td>
+	<td>link=third community</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=wiki</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>fmr_mb</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Home</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Public survey1</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>You have already submitted this form. View your previous submissions.</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Home</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Log out</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Public survey1</td>
+	<td>public wiki1</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextNotPresent</td>
-	<td>Private survey2</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Public survey1</td>
+	<td>private wiki2</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>You must login or register to view this form</td>
+	<td>CM wiki3</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>css=#node-65 &gt; h2 &gt; a</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextNotPresent</td>
+	<td>Edit</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Presentation of public wiki1 updated by fmr_mb</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Revisions</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Revisions</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Mon, 02/20/2012 - 16:41</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Presentation of public wiki1</td>
 	<td></td>
 </tr>
 </tbody></table>
