--- a/sites/all/modules/features/custom/events/selenium/tc/see_user.html
+++ b/sites/all/modules/features/custom/events/selenium/tc/see_user.html
@@ -4,12 +4,12 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://158.167.34.191/multisite_drupal_wde/en" />
-<title>delete</title>
+<title>see_user</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">delete</td></tr>
+<tr><td rowspan="1" colspan="3">see_user</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
@@ -17,9 +17,14 @@
 	<td></td>
 </tr>
 <tr>
+	<td>clickAndWait</td>
+	<td>link=Log out</td>
+	<td></td>
+</tr>
+<tr>
 	<td>type</td>
 	<td>id=edit-name</td>
-	<td>fmr_cm</td>
+	<td>fmr</td>
 </tr>
 <tr>
 	<td>type</td>
@@ -33,32 +38,17 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=communities</td>
+	<td>link=Home</td>
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=third community</td>
+	<td>verifyTextPresent</td>
+	<td>Public event 1</td>
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Private survey2</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Edit</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=edit-delete</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=edit-submit</td>
+	<td>verifyTextNotPresent</td>
+	<td>Private event 2</td>
 	<td></td>
 </tr>
 <tr>
@@ -73,25 +63,19 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Public survey1</td>
+	<td>link=Events</td>
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Edit</td>
+	<td>verifyTextPresent</td>
+	<td>Public event 1</td>
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>id=edit-delete</td>
+	<td>verifyTextNotPresent</td>
+	<td>Private event 2</td>
 	<td></td>
 </tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=edit-submit</td>
-	<td></td>
-</tr>
-
 </tbody></table>
 </body>
 </html>
