--- a/sites/all/modules/features/custom/group_forum/selenium/tc/create_room.html
+++ b/sites/all/modules/features/custom/group_forum/selenium/tc/create_room.html
@@ -4,12 +4,12 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://158.167.34.191/multisite_drupal_wde/en" />
-<title>user_answer</title>
+<title>create_room</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">user_answer</td></tr>
+<tr><td rowspan="1" colspan="3">create_room</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
@@ -24,7 +24,7 @@
 <tr>
 	<td>type</td>
 	<td>id=edit-name</td>
-	<td>fmr</td>
+	<td>fmr_cm</td>
 </tr>
 <tr>
 	<td>type</td>
@@ -38,42 +38,37 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Home</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Public survey1</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextNotPresent</td>
-	<td>Private survey2</td>
+	<td>link=communities</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Public survey1</td>
+	<td>link=third community</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Forum Room</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Forum Thread</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Forum Room</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=edit-submitted-question1</td>
-	<td>blabla</td>
+	<td>id=edit-title</td>
+	<td>Room1</td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>id=edit-submitted-question2-1</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=edit-submitted-question2-4</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=edit-submitted-question2-3</td>
+	<td>css=html.CSS1Compat</td>
 	<td></td>
 </tr>
 <tr>
@@ -83,67 +78,42 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Thank you, your submission has been received.</td>
+	<td>Forum Room Room1 has been created.</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Go back to the form</td>
+	<td>link=Forum Thread</td>
 	<td></td>
 </tr>
 <tr>
+	<td>type</td>
+	<td>id=edit-title</td>
+	<td>Thread11</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=body.cke_show_borders</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=edit-field-forum-room-und</td>
+	<td></td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>id=edit-field-forum-room-und</td>
+	<td>label=Room1</td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
-	<td>link=Results</td>
+	<td>id=edit-submit</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>fmr_mb</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Home</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Public survey1</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>You have already submitted this form. View your previous submissions.</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Home</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Log out</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Public survey1</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextNotPresent</td>
-	<td>Private survey2</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Public survey1</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>You must login or register to view this form</td>
+	<td>Forum Thread Thread11 has been created.</td>
 	<td></td>
 </tr>
 </tbody></table>
