--- a/sites/all/modules/features/custom/group_forum/selenium/tc/create_thread.html
+++ b/sites/all/modules/features/custom/group_forum/selenium/tc/create_thread.html
@@ -4,12 +4,12 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://158.167.34.191/multisite_drupal_wde/en" />
-<title>delete</title>
+<title>create_thread</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">delete</td></tr>
+<tr><td rowspan="1" colspan="3">create_thread</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
@@ -17,9 +17,14 @@
 	<td></td>
 </tr>
 <tr>
+	<td>clickAndWait</td>
+	<td>link=Log out</td>
+	<td></td>
+</tr>
+<tr>
 	<td>type</td>
 	<td>id=edit-name</td>
-	<td>fmr_cm</td>
+	<td>fmr_mb</td>
 </tr>
 <tr>
 	<td>type</td>
@@ -43,47 +48,27 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Private survey2</td>
+	<td>link=Forum</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Edit</td>
+	<td>link=Room1</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=edit-delete</td>
+	<td>link=Add a new thread</td>
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>id=edit-submit</td>
-	<td></td>
+	<td>type</td>
+	<td>id=edit-title</td>
+	<td>Thread12</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=communities</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=third community</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Public survey1</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Edit</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=edit-delete</td>
+	<td>click</td>
+	<td>css=body.cke_show_borders</td>
 	<td></td>
 </tr>
 <tr>
@@ -91,7 +76,11 @@
 	<td>id=edit-submit</td>
 	<td></td>
 </tr>
-
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Forum Thread Thread12 has been created.</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
