--- a/sites/all/modules/features/custom/wiki/selenium/tc/create.html
+++ b/sites/all/modules/features/custom/wiki/selenium/tc/create.html
@@ -4,12 +4,12 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://158.167.34.191/multisite_drupal_wde/en" />
-<title>user_answer</title>
+<title>create</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">user_answer</td></tr>
+<tr><td rowspan="1" colspan="3">create</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
@@ -24,7 +24,7 @@
 <tr>
 	<td>type</td>
 	<td>id=edit-name</td>
-	<td>fmr</td>
+	<td>fmr_mb</td>
 </tr>
 <tr>
 	<td>type</td>
@@ -38,43 +38,33 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Home</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Public survey1</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextNotPresent</td>
-	<td>Private survey2</td>
+	<td>link=communities</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Public survey1</td>
+	<td>link=third community</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Wiki</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=edit-submitted-question1</td>
-	<td>blabla</td>
+	<td>id=edit-title</td>
+	<td>public wiki1</td>
 </tr>
 <tr>
-	<td>click</td>
-	<td>id=edit-submitted-question2-1</td>
-	<td></td>
+	<td>type</td>
+	<td>id=edit-body-und-0-value</td>
+	<td>Presentation of public wiki1</td>
 </tr>
 <tr>
-	<td>click</td>
-	<td>id=edit-submitted-question2-4</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=edit-submitted-question2-3</td>
-	<td></td>
+	<td>select</td>
+	<td>id=edit-group-content-access-und</td>
+	<td>label=Public - accessible to all site users</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -83,67 +73,47 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Thank you, your submission has been received.</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Go back to the form</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Results</td>
+	<td>Wiki public wiki1 has been created.</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>fmr_mb</td>
+	<td>Revision state: Published</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Home</td>
+	<td>link=Wiki</td>
 	<td></td>
 </tr>
 <tr>
+	<td>type</td>
+	<td>id=edit-title</td>
+	<td>private wiki2</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=edit-body-und-0-value</td>
+	<td>Presentation of private wiki2</td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>id=edit-group-content-access-und</td>
+	<td>label=Private - accessible only to group members</td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
-	<td>link=Public survey1</td>
+	<td>id=edit-submit</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>You have already submitted this form. View your previous submissions.</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Home</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Log out</td>
+	<td>Wiki private wiki2 has been created.</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Public survey1</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextNotPresent</td>
-	<td>Private survey2</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Public survey1</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>You must login or register to view this form</td>
+	<td>Revision state: Published</td>
 	<td></td>
 </tr>
 </tbody></table>
