--- a/sites/all/modules/features/custom/wiki/selenium/tc/edit.html
+++ b/sites/all/modules/features/custom/wiki/selenium/tc/edit.html
@@ -4,12 +4,12 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://158.167.34.191/multisite_drupal_wde/en" />
-<title>delete</title>
+<title>edit</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">delete</td></tr>
+<tr><td rowspan="1" colspan="3">edit</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
@@ -17,33 +17,23 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>id=edit-name</td>
-	<td>fmr_cm</td>
+	<td>verifyTextPresent</td>
+	<td>Presentation of community manager's wiki3</td>
+	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>id=edit-pass</td>
-	<td>fmr</td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=edit-submit</td>
+	<td>verifyTextNotPresent</td>
+	<td>Edit</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=communities</td>
+	<td>link=public wiki1</td>
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=third community</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Private survey2</td>
+	<td>verifyTextPresent</td>
+	<td>Edit</td>
 	<td></td>
 </tr>
 <tr>
@@ -52,9 +42,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>id=edit-delete</td>
-	<td></td>
+	<td>type</td>
+	<td>id=edit-body-und-0-value</td>
+	<td>Presentation of public wiki1 updated by fmr_mb</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -62,36 +52,10 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=communities</td>
+	<td>verifyTextPresent</td>
+	<td>Presentation of public wiki1 updated by fmr_mb</td>
 	<td></td>
 </tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=third community</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Public survey1</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Edit</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=edit-delete</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=edit-submit</td>
-	<td></td>
-</tr>
-
 </tbody></table>
 </body>
 </html>
