MULTISITE-101 : Update Selenium tests

--- a/sites/all/modules/features/custom/communities/selenium/tc/browse.html
+++ b/sites/all/modules/features/custom/communities/selenium/tc/browse.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/multisite_drupal_wde/en</td>
+	<td>/multisite_drupal_wde</td>
 	<td></td>
 </tr>
 <tr>
@@ -61,7 +61,6 @@
 	<td>my first community</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
