--- a/sites/all/modules/features/custom/communities/selenium/tc/browse_private.html
+++ b/sites/all/modules/features/custom/communities/selenium/tc/browse_private.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/multisite_drupal_wde/en/?q=en/community/new-third-community</td>
+	<td>/multisite_drupal_wde/?q=en/community/new-third-community</td>
 	<td></td>
 </tr>
 <tr>
@@ -61,7 +61,11 @@
 	<td>link=Private link 4</td>
 	<td></td>
 </tr>
-
+<tr>
+	<td>assertTextPresent</td>
+	<td>http://www.my.url.com</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
