--- a/sites/all/modules/features/custom/communities/selenium/tc/browse_public.html
+++ b/sites/all/modules/features/custom/communities/selenium/tc/browse_public.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/multisite_drupal_wde/en/?q=en/content/private-link-4</td>
+	<td>/multisite_drupal_wde/?q=en/content/private-link-4</td>
 	<td></td>
 </tr>
 <tr>
