--- a/sites/all/modules/features/custom/communities/selenium/tc/manage_join.html
+++ b/sites/all/modules/features/custom/communities/selenium/tc/manage_join.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/multisite_drupal_wde/en/?q=en/community/third-community</td>
+	<td>/multisite_drupal_wde/?q=en/community/third-community</td>
 	<td></td>
 </tr>
 <tr>
@@ -111,7 +111,21 @@
 	<td>fmr_mb</td>
 	<td></td>
 </tr>
-
+<tr>
+	<td>clickAndWait</td>
+	<td>link=My account</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTextPresent</td>
+	<td>Groups audience</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTextPresent</td>
+	<td>third community</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
