--- a/sites/all/modules/features/custom/communities/selenium/tc/request_create.html
+++ b/sites/all/modules/features/custom/communities/selenium/tc/request_create.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/multisite_drupal_wde/en/?q=en/community/second-community</td>
+	<td>/multisite_drupal_wde/en</td>
 	<td></td>
 </tr>
 <tr>
@@ -38,12 +38,12 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Add content</td>
+	<td>link=communities</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=community</td>
+	<td>link=Create a new community</td>
 	<td></td>
 </tr>
 <tr>
@@ -73,7 +73,17 @@
 </tr>
 <tr>
 	<td>assertTextPresent</td>
-	<td>Needs Review</td>
+	<td>Revision state: Draft</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=edit-submit</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTextPresent</td>
+	<td>Revision state: Needs Review</td>
 	<td></td>
 </tr>
 <tr>
@@ -86,7 +96,81 @@
 	<td>third community</td>
 	<td></td>
 </tr>
-
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Create a new community</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=edit-title</td>
+	<td>Fourth community</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=edit-body-und-0-value</td>
+	<td>Presentation of fourth community</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=edit-group-access-und-1</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=edit-submit</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTextPresent</td>
+	<td>community Fourth community has been created.</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTextPresent</td>
+	<td>Revision state: Draft</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=edit-submit</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTextPresent</td>
+	<td>Revision state: Needs Review</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=communities</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTextNotPresent</td>
+	<td>Fourth community</td>
+	<td></td>
+</tr>
+<tr>
+	<td>selectWindow</td>
+	<td>null</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=My workbench</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTextPresent</td>
+	<td>third community</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTextPresent</td>
+	<td>Fourth community</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
