--- a/sites/all/modules/features/custom/links/selenium/ts/propose.html
+++ b/sites/all/modules/features/custom/links/selenium/ts/propose.html
@@ -4,58 +4,79 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://158.167.34.191/multisite_drupal_wde/en" />
-<title>pres_page</title>
+<title>propose</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">pres_page</td></tr>
+<tr><td rowspan="1" colspan="3">propose</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/multisite_drupal_wde/?q=en/communities_directory/s</td>
+	<td>/multisite_drupal_wde/en</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=second community</td>
+	<td>link=login</td>
 	<td></td>
 </tr>
 <tr>
-	<td>assertTextPresent</td>
-	<td>Revision state: Published</td>
+	<td>type</td>
+	<td>id=edit-name</td>
+	<td>contrib03</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=edit-pass</td>
+	<td>pass</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=edit-submit</td>
 	<td></td>
 </tr>
 <tr>
-	<td>assertTextPresent</td>
-	<td>second community</td>
+	<td>clickAndWait</td>
+	<td>link=Links</td>
 	<td></td>
 </tr>
 <tr>
-	<td>assertTextPresent</td>
-	<td>Request group membership</td>
+	<td>clickAndWait</td>
+	<td>link=Create a Link</td>
 	<td></td>
 </tr>
 <tr>
-	<td>assertTextPresent</td>
-	<td>Add content</td>
+	<td>type</td>
+	<td>id=edit-title</td>
+	<td>link01</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=edit-submit</td>
 	<td></td>
 </tr>
 <tr>
-	<td>assertTextPresent</td>
-	<td>My workbench</td>
+	<td>verifyTextPresent</td>
+	<td>Links link01 has been created.</td>
 	<td></td>
 </tr>
 <tr>
-	<td>assertTextPresent</td>
-	<td>members list</td>
+	<td>verifyTextPresent</td>
+	<td>Revision state: Draft</td>
 	<td></td>
 </tr>
 <tr>
-	<td>assertTextPresent</td>
-	<td>Add new comment</td>
+	<td>clickAndWait</td>
+	<td>id=edit-submit</td>
 	<td></td>
 </tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Revision state: Needs Review</td>
+	<td></td>
+</tr>
+
 </tbody></table>
 </body>
 </html>
